# SkillNet

./: .gitignore  README.md
skillnet-ai/: README.md  pyproject.toml
skillnet-ai/src/skillnet_ai/: __init__.py  analyzer.py  cli.py  client.py  creator.py  evaluator.py  models.py  orchestrator.py  prompts.py  providers.py
skillnet-ai/src/skillnet_ai/resources/scenes/sciatlas/: index.md
skillnet-ai/src/skillnet_ai/resources/scenes/sciatlas/communities/: 0000-sciatlas-idea-data.md  0001-sciatlas-table-paper.md  0002-paper-citation-network.md  0003-citation-verifier-docx.md  0004-bib-verify-peer.md
skillnet-ai/src/skillnet_ai/resources/scenes/sciatlas/skills/cards/: academic-writing-refiner.md  bib-verify.md  citation-network.md  citation-verifier.md  data-analysis.md  docx.md  glmocr-table.md  latex-paper-conversion.md  networkx.md  paper-compile.md  pdf.md  peer-review.md  pptx-posters.md  pyzotero.md  read-arxiv-paper.md  retraction-watcher.md  sciatlas-idea-evaluate.md  sciatlas-idea-generate.md  sciatlas-idea-grounding.md  sciatlas-literature-review.md  sciatlas-quick-paper-search.md  sciatlas-researcher-review.md  sciatlas-trend-report.md  scientific-figure-making.md  scientific-slides.md  table-extractor.md  venue-templates.md  zotero-vectorize.md
skillnet-ai/src/skillnet_ai/resources/scenes/sciatlas/skills/sources/: academic-writing-refiner.md  bib-verify.md  citation-network.md  citation-verifier.md  data-analysis.md  docx.md  glmocr-table.md  networkx.md  (+20 more)
skillnet-ai/src/skillnet_ai/resources/scenes/sciatlas/workflows/: paper-compile-skill-peer-review-artifact-compatibility.md
skillnet-ai/tests/: test_analyze_modes.py  test_minimax_integration.py  test_providers.py
(+7 files in other folders)
