[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillnet-ai"
version = "0.1.0"
description = "Official Python SDK for SkillNet: Create, Evaluate, and Connect AI Skills."
readme = "README.md"
authors = [{ name = "SkillNet Team", email = "liangyuannnnn@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5,<3",
    "openai>=1.109.1,<3",
    "pydantic>=2.12.5,<3",
    "tqdm>=4.67.1",
    "typer>=0.21.1,<1",
    "rich>=13.9.4",
    "PyPDF2>=3.0.1",
    "pycryptodome>=3.23.0",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "json-repair>=0.30.0"
]

[project.optional-dependencies]
orchestrate = [
    "claude-agent-sdk>=0.2.110,<0.3",
]
graph = [
    "numpy>=1.24",
    "faiss-cpu>=1.8",
    "networkx>=3.0",
    "scikit-learn>=1.3",
]

[project.urls]
"Homepage" = "http://skillnet.openkg.cn"
"Source" = "https://github.com/zjunlp/SkillNet"

[project.scripts]
skillnet = "skillnet_ai.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
skillnet_ai = [
    "resources/scenes/*/*.md",
    "resources/scenes/*/communities/*.md",
    "resources/scenes/*/skills/cards/*.md",
    "resources/scenes/*/skills/sources/*.md",
    "resources/scenes/*/workflows/*.md",
]
